--- a/index.html
+++ b/index.html
@@ -173,16 +173,15 @@
 
     <!--position-----------------------------------> 
 <div class="position">
+    <img src="image/user.png" alt="" class="position-img">
+    <div class="position-right">
+        <div class="position-center">
+            <div class="font">See our open positions</div>
+            <div class="font2">Our personnel policy is to create the most international <br>workforce
+                possible and weld it together as a team.</div>
+        </div>
     
-        <img src="image/user.png" alt="" class="position-img">
-    
-    <div class="position-center">
-        <div class="font">See our open positions</div>
-        <div class="font2">Our personnel policy is to create the most international <br>workforce
-            possible and weld it together as a team.</div>
-    </div>
-    <div>
-        <img src="image/seejob.png" alt="" class="see-img">
+            <img src="image/seejob.png" alt="" class="see-img">
     </div>
 </div>
 </div>
